--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "name": "nuxt-app",
   "private": true,
   "type": "module",
   "scripts": {
@@ -6,27 +7,27 @@
     "dev": "nuxt dev",
     "generate": "nuxt generate",
     "preview": "nuxt preview",
-    "postinstall": "nuxt prepare",
-    "test": "vitest"
-  },
-  "devDependencies": {
-    "@nuxt/devtools": "^1.4.1",
-    "@nuxt/test-utils": "^3.14.1",
-    "@pinia/nuxt": "^0.5.4",
-    "@pinia/testing": "^0.1.5",
-    "@vitejs/plugin-vue": "^5.1.3",
-    "@vue/test-utils": "^2.4.6",
-    "happy-dom": "^15.7.3",
-    "nuxt": "^3.13.1",
-    "nuxt-viewport": "^2.1.6",
-    "vitest": "^2.0.5",
-    "vue": "^3.5.3",
-    "vue-router": "^4.4.3"
+    "postinstall": "nuxt prepare"
   },
   "dependencies": {
-    "@nordhealth/components": "^3.17.0",
-    "@nordhealth/css": "^3.2.1",
-    "@nordhealth/vue": "^3.17.0",
-    "appwrite": "14.0.1"
+    "@pinia/nuxt": "^0.5.4",
+    "@vueuse/core": "^11.1.0",
+    "appwrite": "^15.0.0",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.1",
+    "lucide-vue-next": "^0.441.0",
+    "nuxt": "^3.13.0",
+    "nuxt-viewport": "^2.1.6",
+    "pinia": "^2.2.2",
+    "radix-vue": "^1.9.5",
+    "shadcn-nuxt": "^0.10.4",
+    "tailwind-merge": "^2.5.2",
+    "tailwindcss-animate": "^1.0.7",
+    "vue": "latest",
+    "vue-router": "latest"
+  },
+  "devDependencies": {
+    "@nuxtjs/tailwindcss": "^6.12.1",
+    "typescript": "^5.6.2"
   }
 }
