--- a/package.json
+++ b/package.json
@@ -7,10 +7,13 @@
     "dev": "nuxt dev",
     "generate": "nuxt generate",
     "preview": "nuxt preview",
-    "postinstall": "nuxt prepare"
+    "postinstall": "nuxt prepare",
+    "lint": "eslint .",
+    "lintfix": "eslint . --fix"
   },
   "dependencies": {
     "@pinia/nuxt": "^0.5.4",
+    "@tanstack/vue-table": "^8.20.5",
     "@vee-validate/nuxt": "^4.13.2",
     "@vee-validate/zod": "^4.13.2",
     "@vueuse/core": "^11.1.0",
@@ -30,7 +33,10 @@
     "zod": "^3.23.8"
   },
   "devDependencies": {
+    "@nuxt/eslint": "^0.5.7",
+    "@nuxtjs/eslint-config-typescript": "^12.1.0",
     "@nuxtjs/tailwindcss": "^6.12.1",
+    "eslint": "^9.10.0",
     "typescript": "^5.6.2"
   }
 }
