--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@vee-validate/nuxt": "^4.13.2",
     "@vee-validate/zod": "^4.13.2",
     "@vueuse/core": "^11.1.0",
+    "animejs": "^3.2.2",
     "appwrite": "^15.0.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
@@ -37,6 +38,7 @@
     "@nuxtjs/eslint-config-typescript": "^12.1.0",
     "@nuxtjs/tailwindcss": "^6.12.1",
     "eslint": "^9.10.0",
+    "sass": "^1.80.2",
     "typescript": "^5.6.2"
   }
 }
